# WebScraper

./: .gitignore  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_scraper.py  vercel.json
api/: index.py
app/: __init__.py  main.py
static/: index.html
